byte-code-compiler/test_files/typing/good/testfile-subtype-1.psc
int_32 main() {
  int_32 x;
  x = 'a';
}
