byte-code-compiler/test_files/typing/bad/testfile-redef-5.psc

int_32 f() {}
int_32 f(int_32 x) {}
int_32 main() {}
